ui changes 5 components

--- a/fe-source/scss/global.scss
+++ b/fe-source/scss/global.scss
@@ -25,3 +25,9 @@
 * GLOBAL COMPONENTS STYLES
  -------------------------------------- */
 @import 'components/global-header';
+@import 'components/homepage-latest';
+@import 'components/global-promotions';
+@import 'components/common-style';
+@import 'components/popular-gateway';
+@import 'components/global-alerts';
+
