--- a/fe-source/scss/global.scss
+++ b/fe-source/scss/global.scss
@@ -25,3 +25,9 @@
 * GLOBAL COMPONENTS STYLES
  -------------------------------------- */
 @import 'components/global-header';
+@import 'components/global-subscription';
+@import 'components/global-contact';
+@import 'components/homepage-indigo-benefits';
+@import 'components/homepage-6e-extras';
+@import 'components/homepage-deals-offers';
+@import 'components/global-footer';
