--- a/views/pages/components/_global-footer.html
+++ b/views/pages/components/_global-footer.html
@@ -1,3 +1,163 @@
+<div class="container">
+	<footer class="ig-footer">
+		<div class="row">
+			<div class="col-md-3">
+				<h7>Get to know us</h7>
+				<ul class="ig-footer-site-list">
+					<li>
+						<a href="#">Investor Relations</a>
+					</li>
+					<li>
+						<a href="#">About Us</a>
+					</li>
+					<li>
+						<a href="#">Careers</a>
+					</li>
+					<li>
+						<a href="#">Board of Directors</a>
+					</li>
+					<li>
+						<a href="#">Leadership Team</a>
+					</li>
+					<li>
+						<a href="#">InterGlobe Enterprises</a>
+					</li>
+					<li>
+						<a href="#">Conditions of Carriage</a>
+					</li>
+					<li>
+						<a href="#">Awards</a>
+					</li>
+					<li>
+						<a href="#">IndiGo FCN</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<h7>Services</h7>
+				<ul class="ig-footer-site-list">
+					<li>
+						<a href="#">New Flights</a>
+					</li>
+					<li>
+						<a href="#">Schedule</a>
+					</li>
+					<li>
+						<a href="#">Fare Sheet</a>
+					</li>
+					<li>
+						<a href="#">IndiGo CarGo</a>
+					</li>
+					<li>
+						<a href="#">Special/Disability Assistance</a>
+					</li>
+					<li>
+						<a href="#">Medical Assistance</a>
+					</li>
+					<li>
+						<a href="#">Group Booking</a>
+					</li>
+					<li>
+						<a href="#">Disclaimer</a>
+					</li>
+					<li>
+						<a href="#">Track Your Bag</a>
+					</li>
+					<li>
+						<a href="#">Web Check-In</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<h7>Talk to Us</h7>
+				<ul class="ig-footer-site-list">
+					<li>
+						<a href="#">Information</a>
+					</li>
+					<li>
+						<a href="#">Contact Us</a>
+					</li>
+					<li>
+						<a href="#">FAQs</a>
+					</li>
+					<li>
+						<a href="#">International</a>
+					</li>
+					<li>
+						<a href="#">Reservation Offices</a>
+					</li>
+					<li>
+						<a href="#">Indigo Fullfilment center</a>
+					</li>
+					<li>
+						<a href="#">Advertise</a>
+					</li>
+					<li>
+						<a href="#">Feedback</a>
+					</li>
+					<li>
+						<a href="#">Site Map</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-md-3">
+				<h7>Social</h7>
+				<ul class="ig-footer-social-list clearfix">
+					<li>
+						<a href="#"></a>
+					</li>
+					<li>
+						<a href="#"></a>
+					</li>
+					<li>
+						<a href="#"></a>
+					</li>
+					<li>
+						<a href="#"></a>
+					</li>
+				</ul>
+				<h7>Download</h7>
+				<ul class="ig-footer-download-list clearfix">
+					<li>
+						<a href="#"></a>
+					</li>
+					<li>
+						<a href="#"></a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-md-12 copyright-blck clearfix">
+				<div class="copyright-content">
+					<span></span>
+					<p>Copyright 2018 IndiGo All rights reserved.</p>
+				</div>
+				<div class="lang-price">
+					<div class="dropdown">
+					  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+					    	English
+					  	</button>
+					  	<div class="dropdown-menu">
+					    	<a class="dropdown-item" href="#">Link 1</a>
+					    	<a class="dropdown-item" href="#">Link 2</a>
+					    	<a class="dropdown-item" href="#">Link 3</a>
+					  	</div>
+					</div>
+					<div class="dropdown">
+					  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+					    	INR
+					  	</button>
+					  	<div class="dropdown-menu">
+					    	<a class="dropdown-item" href="#">Link 1</a>
+					    	<a class="dropdown-item" href="#">Link 2</a>
+					    	<a class="dropdown-item" href="#">Link 3</a>
+					  	</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+</div>
+
 
 <script data-main="js/global" src="js/require.js"></script>
 
