--- a/views/pages/components/_homepage-6e-extras.html
+++ b/views/pages/components/_homepage-6e-extras.html
@@ -10,29 +10,37 @@
 				<picture>
 					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
 				</picture>
-				<h6 class="ig-common-title">PLAN B</h6>
-				<p class="ig-common-subtitle">For Change/ Cancel/ Refund of disrupted flights</p>
+				<div class="ig-common-desc-top">
+					<h6 class="ig-common-title">PLAN B</h6>
+					<p class="ig-common-subtitle">For Change/ Cancel/ Refund of disrupted flights</p>
+			   </div>
 			</div>
 			<div class="col-md-3">
 				<picture>
 					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
 				</picture>
-				<h6 class="ig-common-title">7 or more</h6>
-				<p class="ig-common-subtitle">Get attractive deals on group bookings. know more</p>
+				<div class="ig-common-desc-top">
+					<h6 class="ig-common-title">7 or more</h6>
+					<p class="ig-common-subtitle">Get attractive deals on group bookings. know more</p>
+				</div>
 			</div>
 			<div class="col-md-3">
 				<picture>
 					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
 				</picture>
-				<h6 class="ig-common-title">Fast Forward</h6>
-				<p class="ig-common-subtitle">Check-in first. Get your baggage before anyone else with our Fast Forward service at just ₹400</p>
+				<div class="ig-common-desc-top">
+					<h6 class="ig-common-title">Fast Forward</h6>
+					<p class="ig-common-subtitle">Check-in first. Get your baggage before anyone else with our Fast Forward service at just ₹400</p>
+				</div>
 			</div>
 			<div class="col-md-3">
 				<picture>
 					<img src="https://images.financialexpress.com/2018/03/IndiGo.jpg">
 				</picture>
-				<h6 class="ig-common-title">UAE Visa</h6>
-				<p class="ig-common-subtitle">Get your UAE visa without any paper work and hassle for just ₹6199</p>
+				<div class="ig-common-desc-top">
+					<h6 class="ig-common-title">UAE Visa</h6>
+					<p class="ig-common-subtitle">Get your UAE visa without any paper work and hassle for just ₹6199</p>
+				</div>
 			</div>
 		</div>	
 	</div>
