--- a/views/pages/components/_global-subscription.html
+++ b/views/pages/components/_global-subscription.html
@@ -1,5 +1,5 @@
 
-<section class="ig-subscription-form">
+<section class="ig-subscription-form ig-common-bottom">
 	<h2>Lets keep in touch</h2>
 	<p>Get recommendations, tips, updates, promotions and more.</p>
 	<div class="input-group mb-3">
