--- a/views/pages/components/_homepage-indigo-benefits.html
+++ b/views/pages/components/_homepage-indigo-benefits.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="ig-indigo-benefits">
+	<div class="ig-indigo-benefits ig-common-bottom">
 		<div class="row ">
 			<div class="col-md-12">
 				<h2 class="ig-common-head">IndiGo Benefits</h2>
