--- a/views/pages/components/_global-contact.html
+++ b/views/pages/components/_global-contact.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-	<div class="ig-contact-us">
+	<div class="ig-contact-us ig-common-bottom">
 		<div class="row">
 			<div class="col-md-4">
 				<div class="ig-icon-blck">
