--- a/views/pages/components/_global-alerts.html
+++ b/views/pages/components/_global-alerts.html
@@ -8,8 +8,16 @@
 							<span class="ig-alert-img"></span>
 							<span class="ig-alert-name">INDIGO<br>ALERTS</span>
 						</div>
-						<div class="col-md-9">
-							<p>Cancellation/change fee has been revised for international flights w.e.f 2 May 2018.<a href="javascript:void(0);">Know more</a></p>
+						<div class="col-md-9 ig-run-alert-carousel">
+							<div>
+								<p>Cancellation/change fee has been revised for international flights w.e.f 2 May 2018.<a href="javascript:void(0);">Know more</a></p>
+							</div>
+							<div>
+								<p>Cancellation/change fee has been revised for international flights w.e.f 2 May 2018.<a href="javascript:void(0);">Know more</a></p>
+							</div>
+							<div>
+								<p>Cancellation/change fee has been revised for international flights w.e.f 2 May 2018.<a href="javascript:void(0);">Know more</a></p>
+							</div>
 						</div>
 						<div class="col-md-1">
 							<div class="ig-arrow-carousel"></div>
