--- a/views/pages/components/_global-promotions.html
+++ b/views/pages/components/_global-promotions.html
@@ -7,17 +7,17 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
+		<div class="row ig-promotions-carousel">
+			<div class="col-md-4 ig-carosuel-item">
 				<div class="ig-section-promo">
 					<div class="row">
-						<div class="col-md-9">
+						<div class="col-md-9 col-9">
 							<div class="ig-promotions-left">
 								<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
 								<span class="ig-promotion-second">Expires 31/06/2018</span>
 							</div>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 col-3">
 							<div class="ig-promotions-img">
 								<span class="ig-image-promotions"></span>
 							</div>
@@ -26,16 +26,16 @@
 				</div>
 			</div>
 
-			<div class="col-md-4">
+			<div class="col-md-4 ig-carosuel-item">
 				<div class="ig-section-promo">
 					<div class="row">
-						<div class="col-md-9">
+						<div class="col-md-9 col-9">
 							<div class="ig-promotions-left">
 								<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
 								<span class="ig-promotion-second">Expires 31/06/2018</span>
 							</div>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 col-3">
 							<div class="ig-promotions-img">
 								<span class="ig-image-promotions"></span>
 							</div>
@@ -44,16 +44,16 @@
 				</div>
 			</div>
 
-			<div class="col-md-4">
+			<div class="col-md-4 ig-carosuel-item">
 				<div class="ig-section-promo">
 					<div class="row">
-						<div class="col-md-9">
+						<div class="col-md-9 col-9">
 							<div class="ig-promotions-left">
 								<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
 								<span class="ig-promotion-second">Expires 31/06/2018</span>
 							</div>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 col-3">
 							<div class="ig-promotions-img">
 								<span class="ig-image-promotions"></span>
 							</div>
@@ -61,6 +61,25 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="col-md-4 ig-carosuel-item">
+				<div class="ig-section-promo">
+					<div class="row">
+						<div class="col-md-9 col-9">
+							<div class="ig-promotions-left">
+								<span class="ig-promotion-text">Pay via Airtel Money/Airtel Payements bank & get cashback upto INR 250</span>
+								<span class="ig-promotion-second">Expires 31/06/2018</span>
+							</div>
+						</div>
+						<div class="col-md-3 col-3">
+							<div class="ig-promotions-img">
+								<span class="ig-image-promotions"></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </div>
