--- a/views/pages/components/_homepage-latest.html
+++ b/views/pages/components/_homepage-latest.html
@@ -7,16 +7,17 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row runlatestcarousel">
+		
 			<div class="col-md-3">
 				<div class="ig-inner-section">
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-3 float-left">
 							<div class="ig-icon-discount">
 								
 							</div>
 						</div>
-						<div class="col-md-9">
+						<div class="col-md-9 col-9">
 							<span class="ig-latest-text">Student Discount</span>
 							<span class="ig-latest-text-second">6% off and 10KG extra baggae allowance</span>
 						</div>
@@ -27,12 +28,12 @@
 			<div class="col-md-3">
 				<div class="ig-inner-section ig-sixE-text">
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-3 float-left">
 							<div class="ig-icon-discount">
 								
 							</div>
 						</div>
-						<div class="col-md-9">
+						<div class="col-md-9 col-9">
 							<span class="ig-latest-text">6E Special</span>
 							<span class="ig-latest-text-second">Buy and get upto 4x benifits</span>
 						</div>
@@ -43,12 +44,12 @@
 			<div class="col-md-3">
 				<div class="ig-inner-section ig-sixSme-Text">
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-3 float-left">
 							<div class="ig-icon-discount">
 								
 							</div>
 						</div>
-						<div class="col-md-9">
+						<div class="col-md-9 col-9">
 							<span class="ig-latest-text">6E SME</span>
 							<span class="ig-latest-text-second">Enjoy unlimited changes.Lower cancellation fees and a free snack</span>
 						</div>
@@ -59,12 +60,12 @@
 			<div class="col-md-3">
 				<div class="ig-inner-section ig-gift-text">
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-3 float-left">
 							<div class="ig-icon-discount">
 								
 							</div>
 						</div>
-						<div class="col-md-9">
+						<div class="col-md-9 col-9">
 							<span class="ig-latest-text">Gift</span>
 							<span class="ig-latest-text-second">6% off and 10KG extra baggae allowance</span>
 						</div>
