--- a/fe-source/scss/components/_popular-gateway.scss
+++ b/fe-source/scss/components/_popular-gateway.scss
@@ -30,6 +30,29 @@
 			width: 100%;
 		    height: 195px;
 		    border-radius: 4px;
+
+		    @include breakpoint(mobile){ 
+		    height:128px;
+		    }
 		}
+	}
+	.btn{
+ 	width: 92%;
+    margin: 0px auto;
+    padding: 10px;
+    color: #1c87fc;
+    font-size: 17px;
+    background-color: #efeff4;
+    &:active{
+     color: #1c87fc !important;
+     background-color: #efeff4 !important;
+     border-color:#fff !important;
+    }
+     &:focus{
+     color: #1c87fc !important;
+     background-color: #efeff4 !important;
+     border-color:#fff !important;
+    }
+
 	}
 }
