--- a/views/pages/components/_popular-gateway.html
+++ b/views/pages/components/_popular-gateway.html
@@ -18,8 +18,8 @@
 			</div>
 		</div>
 	 </div>
-	 <div class="row">
-	 	<div class="col-md-3">
+	 <div class="row ig-popular-carousel">
+	 	<div class="col-6 col-md-3 ig-carosuel-item">
 	 		<picture>
 	 			<img src="/images/populargoa.jpg"/>
 	 		</picture>
@@ -29,7 +29,7 @@
 	 		</div>
 	 	</div>
 
-	 	<div class="col-md-3">
+	 	<div class="col-6 col-md-3 ig-carosuel-item">
 	 		<picture>
 	 			<img src="/images/popularmumbai.jpg"/>
 	 		</picture>
@@ -39,7 +39,7 @@
 	 		</div>
 	 	</div>
 
-	 	<div class="col-md-3">
+	 	<div class="col-6 col-md-3 ig-carosuel-item">
 	 		<picture>
 	 			<img src="/images/popularblr.jpg"/>
 	 		</picture>
@@ -49,7 +49,7 @@
 	 		</div>
 	 	</div>
 
-	 	<div class="col-md-3">
+	 	<div class="col-6 col-md-3 ig-carosuel-item">
 	 		<picture>
 	 			<img src="/images/popularhyd.jpg"/>
 	 		</picture>
@@ -58,6 +58,16 @@
 	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
 	 		</div>
 	 	</div>
+	 	<div class="col-6 col-md-3 ig-carosuel-item">
+	 		<picture>
+	 			<img src="/images/popularhyd.jpg"/>
+	 		</picture>
+	 		<div class="ig-common-desc-top">
+	 			<h6 class="ig-common-title">Goa</h6>
+	 			<p class="ig-common-subtitle">Starting at &#x20B9; 200</p>
+	 		</div>
+	 	</div>
+	 	<button type="button" class="d-block d-sm-none btn btn-secondary">See all (25)</button>
 	 </div>
 	</div>
 </div>
