--- a/fe-source/scss/base/_buttons.scss
+++ b/fe-source/scss/base/_buttons.scss
@@ -1,6 +1,13 @@
 /* add all the buttons and their states here
  *************************************************************/
 
+.btn{
+    &.block{
+        width:100%;
+        text-align:center;
+    }
+    padding:10px 20px;
+}
 .btn-default {
     background: transparent;
     color: $dark-gray;
@@ -56,6 +63,20 @@
         border-color: $blue-hover;
     }
 }
+
+.btn-transparent{
+    background:transparent;
+    border:0;
+    &:hover,
+    &:focus,
+    &:active,
+    &.active {
+        background: transparent;
+        color: $black;
+        border-color: transparent;
+    }
+}
+
 .btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus, .btn-default:active:focus, .btn-default:active:hover, .btn-default.active, .btn-default:active, .open>.dropdown-toggle.btn-default {
     background: $blue-hover;
     color: $white;
