--- a/fe-source/scss/components/_homepage-search-carousel.scss
+++ b/fe-source/scss/components/_homepage-search-carousel.scss
@@ -8,6 +8,9 @@
     @include breakpoint(mobile){
         height:auto;
     }
+    .slick-slide{
+        height:100%;
+    }
 }
 
 .ig-hp-carousel-item{
